--- a/dia2/curso/package.json
+++ b/dia2/curso/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "mongojs": "^2.6.0"
+    "mongojs": "^2.6.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "istanbul": "^0.4.5",
